--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         </style>
     </head>
     <body>
-        <div class="app" style="background-color: black;width: 100%;height: 100%;">
-            <div id="map" style="margin-left: 50px;margin-top: 50px;width: 1024px;height: 1000px;background-repeat: no-repeat;z-index: -10;background-color: green">
-                <img src="./img/MB2.png" />
+        <div class="app" style="background-color: black;width: 1200px;height: 2000px;">
+            <div id="map" style="margin-left: 50px;margin-top: 50px;width: 1056px;height: 1920px;background-repeat: no-repeat;z-index: -10;background-color: green">
+                <img src="./img/map.png" />
             </div>
-            <div id="controls" style="width: 150px;height: 150px;background-color: black;position: fixed;bottom: 0;left: 0;">
+            <div id="controls" style="width: 150px;height: 150px;position: fixed;bottom: 0;left: 0;">
                     <div id="top">
                         <img width="25%" src="pacman_files/circle.png">
                     </div>
