Added attacks in poke select page

--- a/item.html
+++ b/item.html
@@ -8,7 +8,10 @@
 <script type="text/javascript">
 
 	if(lib.query('UserPokemon').tableCount!=0)
-		{window.location.href="map.html";}
+		{
+            //window.location.href="map.html";
+        }
+
 </script>
 <script type="text/javascript" src="js/localstoragedb.min.js"></script>
 <script type="text/javascript" src="js/createdb.js"></script>
@@ -22,9 +25,8 @@
         <button class="signup" onclick="select_pokemon(1);">Bulbasaur</button>         
         <ul>
             <li>Grass</li>
-            <li>HP</li>
-            <li>Attacks</li>
-			<li>Weakness</li>			
+            <li>HP : 100</li>
+            <li>Attacks : Razor Leaf, Vine Whip</li>			
         </ul> 
     </div>
         <div class="plan">
@@ -32,9 +34,8 @@
         <button class="signup" onclick="select_pokemon(15);">Squirtle</button>         
         <ul>
             <li>Water</li>
-            <li>HP</li>
-            <li>Attacks</li>
-			<li>Weakness</li>			
+            <li>HP : 100</li>
+            <li>Attacks : Bubble, Water Gun</li>			
         </ul> 
     </div>
         <div class="plan">
@@ -42,9 +43,8 @@
         <button class="signup" onclick="select_pokemon(8);">Charmander</button>         
         <ul>
             <li>Fire</li>
-            <li>HP</li>
-            <li>Attacks</li>
-			<li>Weakness</li>			
+            <li>HP : 100</li>
+            <li>Attacks : Ember, Fire Spin</li>			
         </ul> 
     </div>
 
